kubernetes-manifests/nfs-provisioner/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy
  namespace: nfs-provisioner
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
